Created an Aspif Parser and Data Structures to contains Rules

--- a/src/main_components/CMakeLists.txt
+++ b/src/main_components/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_executable(aspsio main.cpp central_data_manager.cpp input_manager.cpp parser.cpp aspif_parser.cpp)
+file(GLOB SRC_FILES "*.cpp")
+add_executable(aspsio ${SRC_FILES})
